use Collections.emptyList() instead of List.of()